--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -189,12 +189,12 @@ input, select, textarea {
 		}
 
 		h1.major, h2.major, h3.major, h4.major, h5.major, h6.major {
-			border-bottom: solid 1px #ffffff;
+			border-bottom: solid 2px #ffffff;
 			width: -moz-max-content;
 			width: -webkit-max-content;
 			width: -ms-max-content;
-			width: max-content;
-			padding-bottom: 0.5rem;
+			width: 600px;
+			padding-bottom: 0px;
 			margin: 0 0 2rem 0;
 		}
 
@@ -212,6 +212,9 @@ input, select, textarea {
 
 	h3 {
 		font-size: 1rem;
+	}
+	h3 blan{float:right;
+			margin: -0.6em 0 1em 0 !important;
 	}
 
 	h4 {
@@ -251,7 +254,7 @@ input, select, textarea {
 		position: relative;
 		top: -0.5rem;
 	}
-
+	
 	blockquote {
 		border-left: solid 4px #ffffff;
 		font-style: italic;
@@ -663,17 +666,32 @@ input, select, textarea {
 			border-radius: 4px;
 			display: block;
 		}
+		
+		.image.circle {
+
+	}
+
+		.image.circle:before {
+			pointer-events: none;			
+			width: 10%;
+			background-color:transparent;
+		}
+
+		.image.circle img {
+			border-radius: 50%;
+			width:70%
+
+		}
+			
 
 		.image.left, .image.right, .image.leftbot {
-			max-width: 40%;
+			max-width: 47%;
 		}
 
 			.image.left img, .image.right img, .image.leftbot img {
 				border: 2px solid transparent;
 				width: 100%;
 			}
-
-			
 
 		.image.left {
 			float: left;
@@ -845,6 +863,28 @@ input, select, textarea {
 		ul li {
 			padding-left: 0.5em;
 		}
+		
+		ul.res {
+			list-style: square;
+			margin: -1.5rem 0 2rem 2em !important;
+				}
+		ul.resume {
+			list-style: square;
+			margin: -2rem 0 2rem 2em !important;
+				}
+		
+		ul.ume {
+			list-style: none;
+			margin: -1.5rem 0 4rem 0 !important;
+				}
+		
+		ul.ume li span {font-weight: bold;
+					}
+		ul.ume li flan{float: left;
+					}
+		ul.ume li blan{float:right;
+					}
+				
 
 		ul.alt {
 			list-style: none;
@@ -1408,8 +1448,62 @@ input, select, textarea {
 		input[type="submit"]:active,
 		input[type="reset"]:active,
 		input[type="button"]:active,
-		button.kaggle:active,
-		.button.kaggle:active {
+		button.pdf:active,
+		.button.pdf:active {
+			color: #AA0A00;
+			background-color: rgba(255, 255, 255, 0.175);
+		}
+		
+		input[type="submit"].download,
+		input[type="reset"].download,
+		input[type="button"].download,
+		button.download,
+		.button.download {
+		-moz-appearance: none;
+		-webkit-appearance: none;
+		-ms-appearance: none;
+		appearance: none;
+		-moz-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+		-webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+		-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+		background-color: #AA0A00;
+		border-radius: 4px;
+		border: 0.8px;
+		box-shadow: inset 0 0 0 1px #AA0A00;
+		color: #ffffff!important;
+		cursor: pointer;
+		display: inline-block;
+		font-size: 0.8rem;
+		font-weight: 600;
+		height: 2rem;
+		width: 2.1rem;
+		letter-spacing: 0.2rem;
+		line-height: 2.5rem;
+		outline: 0;
+		margin:0;
+		text-align: center;
+		text-decoration: none;
+		text-transform: uppercase;
+		white-space: nowrap;
+		padding: 0 0.25rem 0 0.25rem;
+	}
+
+		input[type="submit"]:hover,
+		input[type="reset"]:hover,
+		input[type="button"]:hover,
+		button.download:hover,
+		.button.download:hover {
+			color: #AA0A00 !important;
+			background-color: #ffffff;
+			font-weight: 600;
+		}
+
+		input[type="submit"]:active,
+		input[type="reset"]:active,
+		input[type="button"]:active,
+		button.download:active,
+		.button.download:active {
 			color: #AA0A00;
 			background-color: rgba(255, 255, 255, 0.175);
 		}
@@ -1663,8 +1757,8 @@ input, select, textarea {
 				position: absolute;
 				top: calc(-3.5rem - 1px);
 				left: calc(50% - 1px);
-				width: 1px;
-				height: calc(3.5rem + 1px);
+				width: 0px;
+				height: 1rem;
 				background: #ffffff;
 			}
 
@@ -1761,6 +1855,52 @@ input, select, textarea {
 					#header nav ul li a:active {
 						background-color: rgba(255, 255, 255, 0.175);
 					}
+
+		#header soc ul.social {
+
+			display: -moz-flex;
+			display: -webkit-flex;
+			display: -ms-flex;
+			display: flex;
+			cursor: default;
+			margin: 0 0 -20rem 0
+		list-style: none;
+		padding-left: 0;
+			
+			
+		}
+
+			#header soc ul.social li {
+				display: inline-block;
+			padding: 0 0.75em 0 0;
+				
+			}
+
+				#header soc ul.social li:first-child {
+					
+				}
+
+				#header soc ul.social li a {
+					border-radius: 100%;
+				box-shadow: inset 0 0 0 1px #ffffff;
+				display: inline-block;
+				height: 2.25rem;
+				line-height: 2.25rem;
+				text-align: center;
+				width: 2.25rem;
+
+				}
+
+					#header soc ul.social li a:hover {
+						background-color: rgba(255, 255, 255, 0.075);
+					}
+
+					#header nav ul.social li a:active {
+						background-color: rgba(255, 255, 255, 0.175);
+					}
+		soc p{margin:-5em 0 -3em 0;
+			padding:0 10px 0 0;
+		}
 
 		#header nav.use-middle:after {
 			content: '';
