--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -580,8 +580,9 @@ input, select, textarea {
 		opacity: 1.0;
 	}
 
-/* Box */
-
+/* Box */ 
+	
+	
 	.box {
 		border-radius: 4px;
 		border: solid 1px #ffffff;
@@ -600,8 +601,16 @@ input, select, textarea {
 			border-radius: 0;
 			padding: 0;
 		}
+	.bord {
+		border: transparent;
+      	padding: 9px;
+      	display: block; 
+		border-radius:20px;
+		background-color:#34383c;   }
+		
 
-/* Icon */
+/* Icon */	
+	
 
 	.icon {
 		text-decoration: none;
@@ -720,7 +729,7 @@ input, select, textarea {
 			display: block;
 			float: left;
 			padding: 0 0 0 0;
-			margin-bottom: 2em;
+			margin-bottom: 0em;
 
 		}
 
@@ -767,7 +776,7 @@ input, select, textarea {
 		.image.projects {
 			display: block;
 			margin-top: -2em;
-			margin-bottom: 2em;
+			margin-bottom:0;
 			background-color: transparent;
 			width: 80%;
 		}
@@ -794,8 +803,9 @@ input, select, textarea {
 	
 		.image.lgprojects {
 			display: block;
+			border-radius: 8px;
 			margin-top: -2em;
-			margin-bottom: 2em;
+			margin-bottom: 0;
 			background-color: transparent;
 			width: 90%;
 		}
