--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1571,6 +1571,114 @@ input, select, textarea {
 			color: #34A853;
 			background-color: rgba(255, 255, 255, 0.175);
 		}
+
+		input[type="submit"].tableau,
+		input[type="reset"].tableau,
+		input[type="button"].tableau,
+		button.tableau,
+		.button.tableau{
+		-moz-appearance: none;
+		-webkit-appearance: none;
+		-ms-appearance: none;
+		appearance: none;
+		-moz-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+		-webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+		-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+		background-color: #2d4b65;
+		border-radius: 4px;
+		border: 0.8px;
+		box-shadow: inset 0 0 0 1px #2d4b65;
+		color: #ffffff !important;
+		cursor: pointer;
+		display: inline-block;
+		font-size: 0.8rem;
+		font-weight: 600;
+		height: 2.75rem;
+		letter-spacing: 0.2rem;
+		line-height: 1.25rem;
+		outline: 0;
+		margin:0;
+		text-align: center;
+		text-decoration: none;
+		text-transform: uppercase;
+		white-space: nowrap;
+		height: 1.25rem;
+		padding: 0 0.25rem 0 0.25rem;
+	}
+
+		input[type="submit"]:hover,
+		input[type="reset"]:hover,
+		input[type="button"]:hover,
+		button.tableau:hover,
+		.button.tableau:hover {
+			color:#2d4b65 !important;
+			background-color: #ffffff;
+			font-weight: 600;
+		}
+
+		input[type="submit"]:active,
+		input[type="reset"]:active,
+		input[type="button"]:active,
+		button.tableau:active,
+		.button.tableau:active {
+			color: #2d4b65;
+			background-color: rgba(255, 255, 255, 0.175);
+		}
+
+		input[type="submit"].query,
+		input[type="reset"].query,
+		input[type="button"].query,
+		button.query,
+		.button.query{
+		-moz-appearance: none;
+		-webkit-appearance: none;
+		-ms-appearance: none;
+		appearance: none;
+		-moz-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+		-webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+		-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+		background-color: #1a73e8;
+		border-radius: 4px;
+		border: 0.8px;
+		box-shadow: inset 0 0 0 1px #1a73e8;
+		color: #ffffff !important;
+		cursor: pointer;
+		display: inline-block;
+		font-size: 0.8rem;
+		font-weight: 600;
+		height: 2.75rem;
+		letter-spacing: 0.2rem;
+		line-height: 1.25rem;
+		outline: 0;
+		margin:0;
+		text-align: center;
+		text-decoration: none;
+		text-transform: uppercase;
+		white-space: nowrap;
+		height: 1.25rem;
+		padding: 0 0.25rem 0 0.25rem;
+	}
+
+		input[type="submit"]:hover,
+		input[type="reset"]:hover,
+		input[type="button"]:hover,
+		button.query:hover,
+		.button.query:hover {
+			color:#1a73e8!important;
+			background-color: #ffffff;
+			font-weight: 600;
+		}
+
+		input[type="submit"]:active,
+		input[type="reset"]:active,
+		input[type="button"]:active,
+		button.query:active,
+		.button.query:active {
+			color: #1a73e8;
+			background-color: rgba(255, 255, 255, 0.175);
+		}
 		
 
 		input[type="submit"].disabled, input[type="submit"]:disabled,
